# Entscheidungs-Roulette

./: .pre-commit-config.yaml  README.md  db_.py  game.py  game_pygame.py  pyproject.toml  winner.txt
game/: Dockerfile  README.md  db_.py  docker-compose.yml  game.py  run_game.sh
game_dict/: Dockerfile  api.py  db_.py  docker-compose.yml  game_logik.py  plan.txt  requirements.txt  run_game.sh
game_dict/static/: pico.classless.green.css  style.css
game_dict/templates/: index.html
