[project]
name = "entscheidungs-roulette"
version = "0.1.0"
description = "Kleines Konsolen-Spiel mit PostgreSQL-Backend"
authors = [
    { name = "Michael", email = "mwedler95@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "sqlalchemy>=2.0.0,<3.0.0",
    "psycopg2-binary>=2.9.0,<3.0.0",
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false

[tool.poetry.group.dev.dependencies]
ruff = "^0.12.4"
pre-commit = "^4.2.0"
pylint = "^3.3.7"
